-
Bug
-
Resolution: Done
-
P1: Critical
-
4.8.5, 5.2.0
-
None
-
XCode 4.6.1, OS X 10.7.5
-
-
f72dcff925deeacaef0b5252ac52097ddedd11c1 and deps
Mac Qt Frameworks are incorrectly structured. They should not contain a /Contents directory. The Info.plist should be located inside /Versions/4/Resources and there should be a sym link from /Resources -> /Versions/4/Resources
The structure of a framework is described here:
Notice that that document does not mention a "/Contents" directory.
The incorrect structure makes it impossible to correctly code sign a Qt Framework. I will file a separate bug for that.
- is required for
-
QTBUG-32896 OS X Frameworks can not be code signed correctly, existing instructions are incorrect
-
- Closed
-
| For Gerrit Dashboard: QTBUG-32895 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 82319,3 | Fix Info.plist location for frameworks | stable | qt/qtbase | Status: ABANDONED | -1 | 0 |
| 95454,5 | fix Info.plist location in framework bundles | 5.3 | qt/qtbase | Status: MERGED | +2 | 0 |
| 95866,3 | make top-level symlinks in bundles point to Current, not the major version | 5.3 | qt/qtbase | Status: MERGED | +2 | 0 |
| 95872,3 | don't try to create nested top-level bundle dir symlinks | 5.3 | qt/qtbase | Status: MERGED | +2 | 0 |