make top-level symlinks in bundles point to Current, not the major version

Current already points to the major version, and the other symlinks are
supposed to take advantage of that (so a hypothetical change of major
versions requires just one symlink to be adjusted).

https://developer.apple.com/library/mac/documentation/MacOSX/Conceptual/BPFrameworks/Concepts/FrameworkAnatomy.html

Task-number: QTBUG-32895
Change-Id: I3c3a38c72ba18de6e48b20f2662341672022a274
Reviewed-by: Morten Johan Sørvig <morten.sorvig@digia.com>

cregit: e9c1e3076c748149eed5296f999688db7a26488b https://github.com/qt/qtbase/commit/e9c1e3076c748149eed5296f999688db7a26488b